Made codes matching with screenshot

--- a/index.html
+++ b/index.html
@@ -9,23 +9,31 @@
 </head>
 <body>
   <h1>Dinosaurs</h1>
-  <div>
-    <i class="icon i-64"><img src="images/ankylosaurus.svg" alt=""></i>
-    <span class="icon-label">Ankylosaurus</span>
-  </div>
-  <div>
-    <i class="icon i-64"><img src="images/hadrosaur.svg" alt=""></i>
-    <span class="icon-label">Hadrosaur</span>
-  </div>
-  <div>
-    <i class="icon i-64"><img src="images/stegosaurus.svg" alt=""></i>
-    <span class="icon-label">Stegosaurus</span>
-  </div>
-  <div>
-    <i class="icon i-64"><img src="images/triceratops.svg" alt=""></i>
-    <span class="icon-label">Triceratops</span>
-  </div>
-
-
+  <ol class="list-group">
+    <li>
+      <div>
+        <i class="icon i-64"><img src="images/ankylosaurus.svg" alt=""></i>
+        <span class="icon-label">Ankylosaurus</span>
+      </div>
+    </li>
+    <li>
+      <div>
+        <i class="icon i-64"><img src="images/hadrosaur.svg" alt=""></i>
+        <span class="icon-label">Hadrosaur</span>
+      </div>
+    </li>
+    <li>
+      <div>
+        <i class="icon i-64"><img src="images/stegosaurus.svg" alt=""></i>
+        <span class="icon-label">Stegosaurus</span>
+      </div>
+    </li>
+    <li>
+      <div>
+        <i class="icon i-64"><img src="images/triceratops.svg" alt=""></i>
+        <span class="icon-label">Triceratops</span>
+      </div>
+    </li>
+  </ol>
 </body>
 </html>
